# doc_spliter_toolbox

./: Cargo.toml  LICENSE  Makefile  README.md  README_CN.md
.claude/: settings.local.json
.github/: cliff.toml
.github/workflows/: ci.yml
locales/: en.yml  zh.yml
src/: cli.rs  extract.rs  gui.rs  i18n.rs  images.rs  main.rs  split.rs
src/gui/: actions.rs  mod.rs  scan.rs  types.rs  workers.rs
