[package]
name = "pdf-splitter"
version = "0.1.0"
edition = "2021"

[dependencies]
lopdf = "0.34"
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
eframe = "0.31"
egui = "0.31"
egui_extras = "0.31"
rfd = "0.15"
anyhow = "1"
rayon = "1"
walkdir = "2"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
flate2 = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
